Fixed alignment and added warning

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,13 @@
   width: 80vw;
 }
 
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .card-content > * {
   margin-bottom: 1em;
 }
